--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.9.1
 Django==5.2.1
 django-cors-headers==4.7.0
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.1
 mysql-connector-python==9.4.0
+PyJWT==2.10.1
 python-dotenv==1.1.1
 sqlparse==0.5.3
