--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 asgiref==3.9.1
+certifi==2025.7.14
+charset-normalizer==3.4.2
 Django==5.2.1
 django-cors-headers==4.7.0
 django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 drf-writable-nested==0.7.2
+idna==3.10
 mysql-connector-python==9.4.0
 PyJWT==2.10.1
 python-dotenv==1.1.1
+requests==2.32.4
 sqlparse==0.5.3
+urllib3==2.5.0
