--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,12 @@ MYSQL_DATABASE=mysql
 MYSQL_USER=admin
 MYSQL_PASSWORD=admin
 MYSQL_HOST=db
+
 REDIS_HOST=redis
+REDIS_URL=redis://redis:6379
+
+ACCESS_TOKEN_DAYS=10
+REFRESH_TOKEN_DAYS=30
+
+EXCHANGE_RATE_API_KEY="YOUR_API_KEY"
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
